gcc/testsuite/gdc.test/compilable/b16346.d
enum A { B }
static assert(is(typeof(A.B) == A));
static assert(is(typeof(A(A.B)) == A));
