gcc/testsuite/gdc.test/fail_compilation/fail60.d
class A
{
 class B
 {

 }

 B b=new B;
}

